[project]
name = "lode_server"
version = "0.1.0"
description = "TCP server and generator (dynamic, GeoJSON, CSV, etc)"
authors = [
    { name = "Andrey Nalivayev", email = "nalivayev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

[project.scripts]
lode-server = "lode_server.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = [
    "lode_server",
    "lode_server.generators",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
